@@ -1,5 +1,14 @@
 bin_PROGRAMS = calcif2
 
+if WITH_GSL
+noinst_PROGRAMS = testpoly
+
+testpoly_SOURCES = \
+	poly.c \
+	poly.h \
+	testpoly.c
+endif
+
 calcif2_SOURCES = \
 	calcif2.c \
 	difxcalc.c \
